fix horizontal scroll

--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -116,7 +116,6 @@
   margin-bottom: 22px;
 }
 .project__time {
-  width: 668px;
   margin: 0 50px 0;
 }
 .project__time-title {
@@ -168,7 +167,6 @@
     margin-left: 18px;
     margin-right: 18px;
     margin-bottom: 10px;
-    width: 284px;
   }
   .project__time-subtitle_container {
     margin-left: 18px;
