--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -23,7 +23,6 @@
   margin-bottom: 20px;
 }
 .footer__copyright {
-  
   font-size: 13px;
   font-style: normal;
   font-weight: 400;
@@ -37,14 +36,13 @@
   display: flex;
 }
 .footer__social-links-item {
-  
   font-size: 13px;
   font-style: normal;
   font-weight: 400;
   line-height: 16px;
   letter-spacing: 0px;
   text-align: right;
- color: white;
+  color: white;
   margin: 0;
   margin-right: 20px;
   transition: 1s;
@@ -60,7 +58,6 @@
 @media screen and (max-width: 768px) {
   .footer {
     margin: 0 30px;
-    width: 708px;
   }
   .footer__text {
     margin-top: 160px;
@@ -69,7 +66,6 @@
 @media screen and (max-width: 450px) {
   .footer {
     margin: 0;
-    width: 300px;
     padding-left: 10px;
     padding-right: 10px;
   }
