--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -81,7 +81,7 @@
 .movies-card__movies-delete-button:hover {
   opacity: 0.7;
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 768px) {
   .movies-card {
     width: 339px;
     height: 257px;
